feat(trader): get traders apis
